Downgrade to Java 15 (with --enable-preview) language level